@@ -1,3 +1,8 @@
+2007-11-5  Sanel <karijes@users.sourceforge.net>
+
+	* In Window added another way of updating data via external (from other
+	programs) calls
+
 2007-10-31  Sanel <karijes@users.sourceforge.net>
 
 	* XSETTINGS code in Window
